try to fix broken layouts

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,40 +1,4 @@
-/*!
- * Minimal Mistakes Jekyll Theme 4.24.0 by Michael Rose
- * Copyright 2013-2020 Michael Rose - mademistakes.com | @mmistakes
- * Licensed under MIT (https://github.com/mmistakes/blob/master/LICENSE)
-*/
+@charset "utf-8";
 
-/* Variables */
-@import "variables";
-
-/* Mixins and functions */
-@import "vendor/breakpoint/breakpoint";
-@include breakpoint-set("to ems", true);
-@import "vendor/magnific-popup/magnific-popup"; // Magnific Popup
-@import "vendor/susy/susy";
-@import "mixins";
-
-/* Core CSS */
-@import "reset";
-@import "base";
-@import "forms";
-@import "tables";
-@import "animations";
-
-/* Components */
-@import "buttons";
-@import "notices";
-@import "masthead";
-@import "navigation";
-@import "footer";
-@import "search";
-@import "syntax";
-
-/* Utility classes */
-@import "utilities";
-
-/* Layout specific */
-@import "page";
-@import "archive";
-@import "sidebar";
-@import "print";
+@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
+@import "minimal-mistakes"; // main partials
